--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
-@import '~font-awesome/css/font-awesome.css';
+//@import '~font-awesome/css/font-awesome.css';
 
 body {
 	font-size : 13px;
