--- a/template.ejs
+++ b/template.ejs
@@ -42,6 +42,8 @@
         <% if (htmlWebpackPlugin.options.recaptcha) { %>
         <script src="https://www.google.com/recaptcha/api.js"></script>
         <% } %>
+
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <% if (htmlWebpackPlugin.options.appMountId) { %>
